# hpc_quant_excercises

./: .gitignore  CMakeLists.txt  README.md
data/mpi_monte_options/: benchmark_out_version_0.csv  polar_box_muller_innaccuracy.txt  spreadsheet_benchmark_mpi_monte_options.ods
docs/: Excercise_Details.md
scripts/: script_mpi_monte_options.py
src/: CMakeLists.txt
src/mpi_monte_carlo_options_pricing/: CMakeLists.txt  benchmark_mpi_monte_options.cpp  io_mpi_monte_options.cpp  io_mpi_monte_options.hpp  modelling_mpi_monte_options.cpp  modelling_mpi_monte_options.hpp  mpi_monte_options.cpp  mpi_monte_options.hpp  pre_controls.hpp  run_mpi_monte_options.cpp  spreadsheet_benchmark_mpi_monte_options.ods  test_mpi_monte_options.cpp
